...
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/rechargeMobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rechargemobile" />

                <LinearLayout
                    android:id="@+id/rechargeMobileChild"
...
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:minHeight="45dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/rechargeMobileNumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/gray_border_style"
                            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
...
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColor="@color/get_bike_black"
                            android:textSize="@dimen/text_size_intermediate" />

                        <EditText
                            android:id="@+id/rechargeAmount"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/gray_border_style"
                            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
...
                            android:textColor="@color/get_bike_black"
                            android:textSize="@dimen/text_size_intermediate" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/rechargeSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@drawable/black_button_style"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:padding="5dp"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/redeemToWallet"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/redeemtowallet" />

                    <LinearLayout
                        android:id="@+id/redeemToWalletChild"
...
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:minHeight="45dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/redeemMobileNumber"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/gray_border_style"
                                android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
...
                                android:maxLines="1"
                                android:padding="5dp"
                                android:textColor="@color/get_bike_black"
                                android:textSize="@dimen/text_size_intermediate" />

                            <EditText
                                android:id="@+id/redeemAmount"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/gray_border_style"
                                android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
...
                                android:minHeight="40dp"
                                android:padding="5dp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/redeemSubmit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@drawable/black_button_style"
                            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                            android:padding="5dp"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/redeemToBank"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/redeem_to_bank" />

                    <LinearLayout
                        android:id="@+id/redeemToBankChildView"
...
                            android:padding="5dp"
                            android:text="Do you want to register request to redeem through your bank account?"
                            android:textColor="@color/gray_holo_dark"
                            android:textSize="@dimen/text_size_small" />

                        <EditText
                            android:id="@+id/bankAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/gray_border_style"
...
                            android:minHeight="45dp"
                            android:padding="5dp"
                            android:textColor="@color/get_bike_black"
                            android:textSize="@dimen/text_size_intermediate" />

                        <Button
                            android:id="@+id/redeemBankSubmit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@drawable/black_button_style"
                            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                            android:padding="5dp"
...
