...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fromAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:lines="1"
                        android:padding="4dp"
                        android:text="From"
                        android:textColor="@color/get_bike_black"
                        android:textSize="@dimen/text_size_too_small"/>

                    <TextView
                        android:id="@+id/toAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
                        android:lines="1"
                        android:paddingTop="4dp"
...
